<resources>
<<<<<<< HEAD
    <string name="app_name">Stretching Alarm</string>
    <string name="action_settings">Settings</string>
=======
    <string name="app_name">스트레칭 알람</string>
    <string name="action_settings_1">White (Default)</string>
    <string name="action_settings_2">Blue</string>
    <string name="action_settings_3">Pink</string>
    <string name="action_settings_4">Black</string>
    <string name="test_button_progressbar">ProgressBar Test</string>

    <string name="admob_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_service">ca-app-pub-8511833551429584/2929659980</string>

    <!-- Labels -->
    <string name="setting_image_description">설정 이미지입니다</string>
    <string name="anim_image_description">스타트 버튼 애니메이션 이미지입니다</string>
    <string name="alarm_layout_description">알람 레이아웃입니다</string>
    <string name="alarm_add_button_description">알람 추가 버튼입니다</string>
>>>>>>> develop

    <string name="createTable">CREATE TABLE IF NOT EXISTS STRALARM (
        NUM INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT,
        NAME TEXT,
        START_H INTEGER,
        START_M INTEGER,
        END_H INTEGER,
        END_M INTEGER,
        INTERVAL INTEGER,
        SETTINGS INTEGER
        )</string>
    <string name="insertAlarm">insert into STRALARM(NAME , START_H , START_M , END_H , END_M , INTERVAL, SETTINGS)  values($name, $sh, $sm, $eh, $em, $intvl, $settings)</string>
    <string name="selectLatest">select * from STRALARM order by NUM desc limit 1</string>

    <string name="createThemeTable">CREATE TABLE IF NOT EXISTS ThemeSetting (SETTINGS INTEGER)</string>

    <string name="alarm_display">다음 스트레칭\n</string>
    <string name="alarm_display_no_alarm">알람이 없어요</string>

    <string name="noti_action_name">typebi.util.stralarm.alarmNotification</string>
    <string name="noti_title">스트레칭 할 시간이에요</string>
    <string name="noti_content">지금 하면 15초, 안 하면 디스크 박살</string>

    <string name="delete_button">삭제</string>
    <string name="time_start">부터</string>
    <string name="time_end">까지</string>
    <string name="time_interval">간격</string>
    <string name="time_interval_unit">분 간격</string>
<<<<<<< HEAD
=======
    <string name="name_hint">알람 이름</string>
>>>>>>> develop
    <string name="bell_setting">벨소리</string>
    <string name="vibration_setting">진동</string>
    <string name="day_of_weak_1">월</string>
    <string name="day_of_weak_2">화</string>
    <string name="day_of_weak_3">수</string>
    <string name="day_of_weak_4">목</string>
    <string name="day_of_weak_5">금</string>
    <string name="day_of_weak_6">토</string>
    <string name="day_of_weak_7">일</string>
    <string name="confirm_button">저장</string>

    <string name="progress_start">START</string>
    <string name="progress_exit">EXIT</string>
</resources>
