<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="typebi.util.stralarm.MainActivity">
    <item
        android:id="@+id/action_settings_1"
        android:orderInCategory="100"
        android:title="@string/action_settings_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings_2"
        android:orderInCategory="100"
        android:title="@string/action_settings_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings_3"
        android:orderInCategory="100"
        android:title="@string/action_settings_3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings_4"
        android:orderInCategory="100"
        android:title="@string/action_settings_4"
        app:showAsAction="never" />
</menu>
