<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 삭제버튼 ...으로 바꾸기 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="right">
        <Button android:id="@+id/btn_delete"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginRight="25dp"
            android:text="삭제"/>
    </LinearLayout>
    <LinearLayout
        style="@style/addAlarmContainer">
        <TimePicker android:id="@+id/time_start"
            style="@style/addAlarmPicker"/>
        <TextView
            style="@style/addAlarmText"
            android:text="@string/time_start"/>
    </LinearLayout>
    <LinearLayout
        style="@style/addAlarmContainer">
        <TimePicker android:id="@+id/time_end"
            style="@style/addAlarmPicker"/>
        <TextView
            style="@style/addAlarmText"
            android:text="@string/time_end"/>
    </LinearLayout>
    <LinearLayout
        style="@style/addAlarmContainer">
        <LinearLayout
            style="@style/addAlarmContainer"
            android:layout_width="0dp"
            android:layout_weight="6">
            <NumberPicker android:id="@+id/time_interval"
                android:layout_width="50dp"
                android:layout_height="150dp"/>
        </LinearLayout>
        <TextView
            style="@style/addAlarmText"
            android:layout_weight="3"
            android:text="@string/time_interval_unit">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">
        <EditText android:id="@+id/alarm_name"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="10"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:maxLength="20"
            android:singleLine="true"
            android:hint="알람 이름">
        </EditText>
    </LinearLayout>
    <LinearLayout
        style="@style/addAlarmContainer"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:gravity="center">
        <CheckBox
            style="@style/dayOfWeekChecker"
            android:text="월">
        </CheckBox>
        <CheckBox
            style="@style/dayOfWeekChecker"
            android:text="화">
        </CheckBox>
        <CheckBox
            style="@style/dayOfWeekChecker"
            android:text="수">
        </CheckBox>
        <CheckBox
            style="@style/dayOfWeekChecker"
            android:text="목">
        </CheckBox>
        <CheckBox
            style="@style/dayOfWeekChecker"
            android:text="금">
        </CheckBox>
        <CheckBox
            style="@style/dayOfWeekChecker"
            android:textColor="#3F51B5"
            android:text="토">
        </CheckBox>
        <CheckBox
            style="@style/dayOfWeekChecker"
            android:textColor="#F44336"
            android:text="일">
        </CheckBox>
    </LinearLayout>
    <LinearLayout
        style="@style/addAlarmContainer"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="left">
        <Switch android:id="@+id/switch_bell"
            style="@style/addAlarmSettings"
            android:text="@string/bell_setting"/>
        <Switch android:id="@+id/switch_vibe"
            style="@style/addAlarmSettings"
            android:text="@string/vibration_setting"/>
    </LinearLayout>
    <LinearLayout
        style="@style/addAlarmContainer"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:gravity="right">
        <Button android:id="@+id/btn_add"
            android:layout_marginRight="25dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="저장"/>
    </LinearLayout>
</LinearLayout>